<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Test</string>
    <string name="item">item</string>
    <string name="qty">Quantity</string>
    <string name="grd1">Grade 1</string>
    <string name="grd2">Grade 2</string>
    <string name="grd3">Grade 3</string>
    <string name="grd4">Grade 4</string>
    <string name="grd5">Grade 5</string>
    <string name="grd6">Grade 6</string>
    <string name="grd7">Grade 7</string>
    <string name="grd8">Grade 8</string>
    <string name="grd9">Grade 9</string>
    <string name="grd10">Grade 10</string>
    <string name="grd11">Grade 11</string>
    <string name="grd12">Grade 12</string>
    <string name="grd13">Grade 13</string>
    <string name="category">Category</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_my_library">MyLibrary</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_activity2">Activity2</string>
    <string name="title_activity_activity3">Activity3</string>
    <string name="edit_profile1">Edit Profile</string>
    <string name="person_name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="home_town">Home Town</string>
    <string name="button_save">Save</string>
    <string name="signup">Sign Up</string>
    <string name="name">Username</string>
    <string name="name1">Name</string>
    <string name="gender">Gender</string>
    <string name="firstname">First Name</string>
    <string name="location">Location</string>
    <string name="type">Account Type</string>
    <string name="basic">Basic</string>
    <string name="secondname">Second Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="rpwd">Re-enter password</string>
    <string name="submit">Submit</string>
    <string name="agreement">By clicking Submit, I agree to Book Circle Terms and Conditions</string>
    <string name="schools">Schools</string>
    <string name="bookstores">Book Stores</string>
    <string name="DOB">Date of Birth(YYYY-MM-DD)</string>
    <string name="friends">Community</string>
    <string name="wishlist">Wish List</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="my_library">My Library</string>
    <string name="button_search">Search</string>
    <string name="button_edit">Edit</string>
    <string name="text1">New to Book Circle</string>
    <string name="login">Login</string>
    <string name="title_activity_">Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="profile1">My Profile</string>
    <string name="button_add_new">Add New</string>
    <string name="title_activity_add_new_to_library">AddNewToLibrary</string>
    <string name="add_new_book">Add New</string>
    <string name="book_title">Title</string>
    <string name="author_name">Author</string>
    <string name="isbn_number">ISBN</string>
    <string name="button_add">Add</string>
    <string name="review">Review</string>
    <string name="title_activity_table">Table</string>
    <string name="my_library2">My Library</string>
    <string name="search_field">Enter text to Search</string>
    <string name="button_search2">Search</string>
    <string name="title_activity_my_review">MyReview</string>
    <string name="my_review">My Review</string>
    <string name="title_activity_edit_book">EditBook</string>
    <string name="button_save_changes">Save Changes</string>
    <string name="edit_book">Edit Book</string>
    <string name="rating">Ratings</string>
    <string name="rating1">My Rating</string>
    <string name="column_title">Title</string>
    <string name="column_author">Author</string>
    <string name="column_rating">Rating</string>
    <string name="column_review">Review</string>
    <string name="title_activity_friendlist">Friendlist</string>
    <string name="friendlist">My Friends</string>
    <string name="title_activity_bookstores">Bookstores</string>
    <string name="title_activity_schools">Schools</string>
    <string name="title_activity_wishlist">Wishlist</string>
    <string name="usernamehint">Enter Username</string>
    <string name="pwdhint">Enter Password</string>
    <string name="title_activity_edit_library">Edit_library</string>
    <string name="book_author">Author</string>
    <string name="book_rating">My Rating</string>
    <string name="book_review">My Review</string>
    <string name="add_button">Add</string>
    <string name="Address">Address</string>
    <string name="title_activity_edit_wishlist">Edit_wishlist</string>
    <string name="title_activity_school__main">School_MainActivity</string>
    <string name="title_activity_school_itemlist">School_itemlist</string>
</resources>
