<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/firstname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/person_name" />
    <Button android:id="@id/button2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="54.0dip" android:text="@string/grd2" android:layout_toRightOf="@id/button1" android:layout_alignBaseline="@id/button1" android:layout_alignBottom="@id/button1" />
    <Button android:id="@id/button5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grd4" android:layout_alignBaseline="@id/button3" android:layout_alignLeft="@id/button2" android:layout_alignBottom="@id/button3" />
    <Button android:id="@id/button7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grd6" android:layout_alignBaseline="@id/button6" android:layout_alignLeft="@id/button5" android:layout_alignBottom="@id/button6" />
    <Button android:id="@id/button9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grd8" android:layout_alignBaseline="@id/button8" android:layout_alignLeft="@id/button7" android:layout_alignBottom="@id/button8" />
    <Button android:id="@id/button11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grd10" android:layout_alignLeft="@id/button9" android:layout_alignTop="@id/button10" />
    <Button android:id="@id/button12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grd12" android:layout_alignBaseline="@id/button4" android:layout_alignLeft="@id/button11" android:layout_alignRight="@id/button11" android:layout_alignBottom="@id/button4" />
    <Button android:id="@id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grd1" android:layout_below="@id/firstname" android:layout_alignLeft="@id/firstname" />
    <Button android:id="@id/button4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grd11" android:layout_below="@id/button10" android:layout_alignLeft="@id/button10" />
    <Button android:id="@id/button3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grd3" android:layout_toLeftOf="@id/button2" android:layout_below="@id/button1" />
    <Button android:id="@id/button6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grd5" android:layout_toLeftOf="@id/button2" android:layout_below="@id/button3" />
    <Button android:id="@id/button8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grd7" android:layout_toLeftOf="@id/button2" android:layout_below="@id/button6" />
    <Button android:id="@id/button10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grd9" android:layout_toLeftOf="@id/button2" android:layout_below="@id/button8" />
    <Button android:id="@id/button13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/grd13" android:layout_below="@id/button4" android:layout_alignLeft="@id/button4" />
</RelativeLayout>