<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/buttonschools" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginBottom="22.0dip" android:text="@string/schools" android:layout_alignLeft="@id/buttonbookstores" android:layout_alignParentBottom="true" />
    <Button android:id="@id/buttonbookstores" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/bookstores" android:layout_above="@id/buttonschools" android:layout_alignLeft="@id/buttonfriends" />
    <Button android:id="@id/buttonfriends" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginBottom="17.0dip" android:text="@string/friends" android:layout_above="@id/buttonbookstores" android:layout_alignLeft="@id/buttonwishlist" />
    <Button android:id="@id/buttonwishlist" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/wishlist" android:layout_above="@id/buttonfriends" android:layout_alignLeft="@id/buttonlib" />
    <Button android:id="@id/buttonlib" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/library" android:layout_above="@id/buttonwishlist" android:layout_centerHorizontal="true" />
    <Button android:id="@id/buttonmyprofile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="22.0dip" android:text="@string/profile" android:layout_above="@id/buttonlib" android:layout_alignLeft="@id/buttonlib" android:layout_alignRight="@id/buttonlib" android:layout_centerHorizontal="true" />
</RelativeLayout>