<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/textViewEditBook" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_book" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <TextView android:id="@id/textViewTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="34.0dip" android:layout_marginTop="36.0dip" android:text="@string/book_title" android:layout_below="@id/textViewEditBook" android:layout_alignParentLeft="true" />
    <EditText android:id="@id/editTextTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:layout_below="@id/textViewTitle" android:layout_alignLeft="@id/textViewTitle" android:inputType="text">
        <requestFocus />
    </EditText>
    <TextView android:id="@id/textViewAuthor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/author_name" android:layout_below="@id/editTextTitle" android:layout_alignLeft="@id/editTextTitle" />
    <EditText android:id="@id/editTextAuthor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:layout_below="@id/textViewAuthor" android:layout_alignLeft="@id/textViewAuthor" android:inputType="textPersonName" />
    <TextView android:id="@id/textViewISBN" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/isbn_number" android:layout_below="@id/editTextAuthor" android:layout_alignLeft="@id/editTextAuthor" />
    <EditText android:id="@id/editTextISBN" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:layout_below="@id/textViewISBN" android:layout_alignLeft="@id/textViewISBN" android:inputType="number" />
    <TextView android:id="@id/textViewReview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/review" android:layout_below="@id/editTextISBN" android:layout_alignLeft="@id/editTextISBN" />
    <EditText android:id="@id/editTextReview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:layout_below="@id/textViewReview" android:layout_alignLeft="@id/textViewReview" android:inputType="text" />
    <Button android:id="@id/buttonSaveChanges" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="54.0dip" android:text="@string/button_save_changes" android:layout_alignRight="@id/editTextReview" android:layout_alignParentBottom="true" />
</RelativeLayout>