<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/firstname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" />
    <EditText android:id="@id/usernameET" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:hint="@string/usernamehint" android:ems="10" android:layout_below="@id/firstname" android:layout_alignLeft="@id/firstname" android:inputType="text">
        <requestFocus />
    </EditText>
    <TextView android:id="@id/passTV" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="27.0dip" android:text="@string/password" android:layout_below="@id/usernameET" android:layout_alignLeft="@id/usernameET" />
    <EditText android:id="@id/passET" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/pwdhint" android:ems="10" android:layout_below="@id/passTV" android:layout_alignLeft="@id/passTV" android:inputType="textPassword" />
    <Button android:id="@id/buttonlogin1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/login" android:layout_below="@id/passET" android:layout_alignLeft="@id/passET" />
    <TextView android:textSize="20.0sp" android:textStyle="italic" android:textColor="#ffffffff" android:id="@id/signuptext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="   New to book circle ?" android:layout_below="@id/buttonlogin1" android:layout_alignLeft="@id/buttonlogin1" />
    <TextView android:id="@id/signupTopic" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="23.0dip" android:text="Select your user type &amp; sign up now" android:layout_below="@id/signuptext" android:layout_alignLeft="@id/signuptext" />
    <Spinner android:id="@id/userSpinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/signupTopic" android:layout_alignLeft="@id/signupTopic" />
    <Button android:id="@id/buttonsignup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Signup" android:layout_below="@id/userSpinner" android:layout_alignLeft="@id/userSpinner" />
</RelativeLayout>